--- a/vtl-bundles/vtl-r/RVTL/pom.xml
+++ b/vtl-bundles/vtl-r/RVTL/pom.xml
@@ -156,13 +156,19 @@
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-bundle-deps</artifactId>
-			<version>${project.version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-java2r</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-editor</artifactId>
+			<version>${project.version}</version>
+			<classifier>bundle</classifier>
+			<type>zip</type>
 		</dependency>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
