--- a/vtl-bundles/vtl-bundle-deps/pom.xml
+++ b/vtl-bundles/vtl-bundle-deps/pom.xml
@@ -26,7 +26,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>vtl-bundle-deps</artifactId>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>it.bancaditalia.oss.vtl</groupId>
