--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,8 @@
 		<junit.version>5.10.2</junit.version>
 		<mockito.version>5.11.0</mockito.version>
 		<hsqldb.version>2.7.2</hsqldb.version>
+		<mockserver.version>5.15.0</mockserver.version>
+		<kryo.version>4.0.3</kryo.version>
 		<jacoco.version>0.8.11</jacoco.version>
 		<jacoco.ut.file>${project.build.directory}/jacoco-ut.exec</jacoco.ut.file>
 		<jacoco.it.file>${project.build.directory}/jacoco-it.exec</jacoco.it.file>
@@ -340,6 +342,13 @@
 				<artifactId>vtl-spark</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			
+			<!-- common dependencies used by most modules -->
+			<dependency>
+				<groupId>org.threeten</groupId>
+				<artifactId>threeten-extra</artifactId>
+				<version>${threeten.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-runtime</artifactId>
@@ -350,12 +359,17 @@
 				<artifactId>jakarta.activation-api</artifactId>
 				<version>2.0.1</version>
 			</dependency>
-			
-			<!-- common dependencies used by most modules -->
+
+			<!-- fixes for dependency convergence errors in sdmx.io fusion -->
 			<dependency>
-				<groupId>org.threeten</groupId>
-				<artifactId>threeten-extra</artifactId>
-				<version>${threeten.version}</version>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.14.0</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-tx</artifactId>
+				<version>5.3.34</version>
 			</dependency>
 			
 			<!-- support decoupling of grammar and concrete AST -->
@@ -481,13 +495,13 @@
 			<dependency>
 				<groupId>com.esotericsoftware</groupId>
 				<artifactId>kryo</artifactId>
-				<version>4.0.3</version>
+				<version>${kryo.version}</version>
 				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.mock-server</groupId>
 				<artifactId>mockserver-junit-jupiter</artifactId>
-				<version>5.15.0</version>
+				<version>${mockserver.version}</version>
 				<scope>test</scope>
 			</dependency>
 		</dependencies>
@@ -521,20 +535,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
 					<version>${source.version}</version>
-					<executions>
-						<execution>
-							<id>sources</id>
-							<goals>
-								<goal>jar-no-fork</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>test-sources</id>
-							<goals>
-								<goal>test-jar-no-fork</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -758,10 +758,10 @@
 				</executions>
 				<configuration>
 					<rules>
-						<dependencyConvergence />
 						<requireJavaVersion>
 							<version>[11,)</version>
 						</requireJavaVersion>
+						<dependencyConvergence />
 						<requireProfileIdsExist />
 					</rules>
 				</configuration>
