--- a/pom.xml
+++ b/pom.xml
@@ -369,7 +369,12 @@
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-tx</artifactId>
-				<version>5.3.34</version>
+				<version>5.3.39</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.ldap</groupId>
+				<artifactId>spring-ldap-core</artifactId>
+				<version>2.4.2</version>
 			</dependency>
 			
 			<!-- support decoupling of grammar and concrete AST -->
