Repackaged VTLStudio for shinyapps.io

--- a/vtl-bundles/vtl-r/RVTL/pom.xml
+++ b/vtl-bundles/vtl-r/RVTL/pom.xml
@@ -227,7 +227,7 @@
 									<overWrite>true</overWrite>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${project.build.outputDirectory}/R/inst/www</outputDirectory>
+							<outputDirectory>${project.build.outputDirectory}/R/inst/VTLStudio/www/static</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
