--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.2.0</revision>
+		<revision>1.2.1-SNAPSHOT</revision>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -698,6 +698,7 @@
 					</executions>
 					<configuration>
 						<flattenMode>ossrh</flattenMode>
+						<updatePomFile>true</updatePomFile>
 					</configuration>
 				</plugin>
 				<plugin>
