--- a/vtl-bundles/vtl-r/RVTL/pom.xml
+++ b/vtl-bundles/vtl-r/RVTL/pom.xml
@@ -148,6 +148,10 @@
 		</dependency>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-confman</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-java2r</artifactId>
 		</dependency>
 		<dependency>
