add RVTL post-installation tests. add missing files. exclude Rdata from license in pom.

--- a/pom.xml
+++ b/pom.xml
@@ -739,6 +739,7 @@
 									<exclude>**/*.Rproj</exclude>
 									<exclude>/R</exclude>
 									<exclude>**/.externalToolBuilders/**</exclude>
+									<exclude>**/*.Rdata</exclude>
 								</excludes>
 							</licenseSet>
 						</licenseSets>
