--- a/vtl-parsers/vtl-parser/pom.xml
+++ b/vtl-parsers/vtl-parser/pom.xml
@@ -46,6 +46,17 @@
 			<artifactId>junit-jupiter-api</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -67,7 +78,6 @@
 					</execution>
 				</executions>
 				<configuration>
-					<visitor>true</visitor>
 					<listener>false</listener>
 				</configuration>
 			</plugin>
