--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
 	<version>${revision}</version>
 	<packaging>pom</packaging>
 
-	<name>VTL Engine &amp; Editor</name>
-	<description>VTL engine end editor for VTL 2.x specification</description>
-	<url>${siteUrl}</url>
+	<name>VTL Engine and Editor</name>
+	<description>VTL engine and editor for VTL 2.x specification</description>
+	<url>${scmUrl}</url>
 
 	<inceptionYear>2020</inceptionYear>
 
@@ -99,43 +99,6 @@
 			</modules>
 		</profile>
 		<profile>
-			<id>full-reporting</id>
-			<activation>
-				<property>
-					<name>parent.relativePath</name>
-				</property>
-			</activation>
-			<reporting>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-project-info-reports-plugin</artifactId>
-						<reportSets>
-							<reportSet>
-								<reports>
-									<report>summary</report>
-									<report>dependency-info</report>
-									<report>dependencies</report>
-									<report>modules</report>
-									<report>plugins</report>
-
-									<!-- parent specific reports -->
-									<report>dependency-management</report>
-									<report>plugin-management</report>
-									<report>ci-management</report>
-									<report>dependency-convergence</report>
-									<report>issue-management</report>
-									<report>licenses</report>
-									<report>scm</report>
-									<report>team</report>
-								</reports>
-							</reportSet>
-						</reportSets>
-					</plugin>
-				</plugins>
-			</reporting>
-		</profile>
-		<profile>
 			<id>with-r</id>
 		</profile>
 		<profile>
@@ -177,8 +140,8 @@
 		<install.version>3.1.3</install.version>
 		<surefire.version>3.5.0</surefire.version>
 		<enforcer.version>3.4.0</enforcer.version>
-		<reporting.version>3.7.0</reporting.version>
 		<gpg.version>3.1.0</gpg.version>
+		<site.version>3.21.0</site.version>
 		<central-publishing.version>0.7.0</central-publishing.version>
 		
 		<jaxb2-maven-plugin.version>3.3.0</jaxb2-maven-plugin.version>
@@ -209,28 +172,27 @@
 		<hsqldb.version>2.7.2</hsqldb.version>
 		<mockserver.version>5.15.0</mockserver.version>
 		<kryo.version>4.0.3</kryo.version>
-		<jacoco.version>0.8.11</jacoco.version>
+		<jacoco.version>0.8.13</jacoco.version>
 		<jacoco.ut.file>${project.build.directory}/jacoco-ut.exec</jacoco.ut.file>
 		<jacoco.it.file>${project.build.directory}/jacoco-it.exec</jacoco.it.file>
 
 		<scmUrl>https://github.com/vpinna80/VTL</scmUrl>
-		<siteUrl>https://vpinna80.github.io/VTL</siteUrl>
 		<licenseUrl>
 			https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt
 		</licenseUrl>
 	</properties>
 
 	<distributionManagement>
-		<site>
-			<id>site</id>
-			<url>${siteUrl}</url>
-		</site>
 		<repository>
 			<id>ossrh</id>
 			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
 		</repository>
 	</distributionManagement>
-
+	
+	<reporting>
+		<excludeDefaults>true</excludeDefaults>
+	</reporting>
+	
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -614,8 +576,8 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-project-info-reports-plugin</artifactId>
-					<version>${reporting.version}</version>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>${site.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.antlr</groupId>
@@ -647,9 +609,6 @@
 							</configuration>
 						</execution>
 					</executions>
-					<configuration>
-						<inclNoLocationClasses>false</inclNoLocationClasses>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -687,7 +646,7 @@
 					<executions>
 						<execution>
 							<id>flattening</id>
-							<phase>validate</phase>
+							<phase>verify</phase>
 							<goals>
 								<goal>flatten</goal>
 							</goals>
@@ -777,10 +736,6 @@
 				<artifactId>license-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>flatten-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
 				<version>${enforcer.version}</version>
@@ -804,30 +759,16 @@
 				</configuration>
 			</plugin>
 			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>flatten-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
 			</plugin>
 			<plugin>
 				<groupId>org.sonatype.central</groupId>
 				<artifactId>central-publishing-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>site-maven-plugin</artifactId>
-				<version>0.12</version>
-				<executions>
-					<execution>
-						<phase>site-deploy</phase>
-						<goals>
-							<goal>site</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<server>github</server>
-					<message>Update documentation</message>
-					<merge>true</merge>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
