--- a/pom.xml
+++ b/pom.xml
@@ -599,6 +599,9 @@
 								<includes>
 									<include>it/bancaditalia/oss/vtl/**</include>
 								</includes>
+								<excludes>
+									<exclude>it/bancaditalia/oss/vtl/impl/engine/mapping/xml/**</exclude>
+								</excludes>
 							</configuration>
 						</execution>
 						<execution>
@@ -612,6 +615,9 @@
 								<includes>
 									<include>it/bancaditalia/oss/vtl/**</include>
 								</includes>
+								<excludes>
+									<exclude>it/bancaditalia/oss/vtl/impl/engine/mapping/xml/**</exclude>
+								</excludes>
 							</configuration>
 						</execution>
 					</executions>
