--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.2.1-SNAPSHOT</revision>
+		<revision>1.2.1</revision>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
