--- a/pom.xml
+++ b/pom.xml
@@ -152,12 +152,12 @@
 
 		<scala.version>2.13.16</scala.version>
 		<scala.compat.version>2.13</scala.compat.version>
-		<spark.version>3.5.5</spark.version>
+		<spark.version>3.5.6</spark.version>
 
 		<ac-lang3.version>3.17.0</ac-lang3.version>
 		<jackson.version>2.19.0</jackson.version>
 		<jsonschema.version>0.23.0</jsonschema.version>
-		<picocli.version>4.7.5</picocli.version>
+		<picocli.version>4.7.7</picocli.version>
 		<jaxb.version>4.0.2</jaxb.version>
 		<jaxb.runtime.version>4.0.5</jaxb.runtime.version>
 		<thymeleaf.version>3.1.2.RELEASE</thymeleaf.version>
@@ -166,9 +166,9 @@
 		<io.sdmx.version>1.1.8</io.sdmx.version>
 		<guava.version>30.1.1-jre</guava.version>
 
-		<junit.version>5.12.2</junit.version>
+		<junit.version>5.13.4</junit.version>
 		<hamcrest.version>3.0</hamcrest.version>
-		<mockito.version>5.17.0</mockito.version>
+		<mockito.version>5.19.0</mockito.version>
 		<hsqldb.version>2.7.2</hsqldb.version>
 		<mockserver.version>5.15.0</mockserver.version>
 		<kryo.version>5.6.2</kryo.version>
@@ -356,6 +356,11 @@
 				<groupId>org.springframework.ldap</groupId>
 				<artifactId>spring-ldap-core</artifactId>
 				<version>2.4.2</version>
+			</dependency>
+			<dependency>
+				<groupId>org.objenesis</groupId>
+				<artifactId>objenesis</artifactId>
+				<version>3.4</version>
 			</dependency>
 			
 			<!-- support decoupling of grammar and concrete AST -->
