Removed orphaned module vtl-samples

--- a/vtl-envs/vtl-envsamples/pom.xml
+++ b/vtl-envs/vtl-envsamples/pom.xml
@@ -39,7 +39,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
-			<artifactId>vtl-samples</artifactId>
+			<artifactId>vtl-types</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
