--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.2.2-SNAPSHOT</revision>
+		<revision>1.3.0</revision>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -339,31 +339,26 @@
 
 			<!-- fixes for dependency convergence errors -->
 			<dependency>
-				<groupId>org.apache.commons</groupId>
-				<artifactId>commons-lang3</artifactId>
-				<version>3.14.0</version>
+				<groupId>org.checkerframework</groupId>
+				<artifactId>checker-qual</artifactId>
+				<version>3.19.0</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.errorprone</groupId>
+				<artifactId>error_prone_annotations</artifactId>
+				<version>2.10.0</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-logging</groupId>
 				<artifactId>commons-logging</artifactId>
-				<version>1.3.2</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-tx</artifactId>
-				<version>5.3.39</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.ldap</groupId>
-				<artifactId>spring-ldap-core</artifactId>
-				<version>2.4.2</version>
+				<version>1.3.5</version>
 			</dependency>
 			<dependency>
 				<groupId>org.objenesis</groupId>
 				<artifactId>objenesis</artifactId>
 				<version>3.4</version>
 			</dependency>
-			
+
 			<!-- support decoupling of grammar and concrete AST -->
 			<dependency>
 				<groupId>jakarta.xml.bind</groupId>
